--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         <div class="headWrapper">
 
             <div class="imgBox">
-                <img src="assets/logo/Booki.png" alt="Logo Booki" width="61px" height="19px" />
+                <img src="images/logo/Booki.png" alt="Logo Booki" width="61px" height="19px" />
             </div>
             <div class="linkBox">
                     <a href="#hebergements">Hébergements</a>
@@ -63,7 +63,7 @@
 
           <div class="cardsrow"> 
           <div class="cardMarseille" id="hebergements">
-                <img src="assets\hebergements\1_xlarge\marcus-loke-WQJvWU_HZFo-unsplash.jpg" alt="Avatar" />
+                <img src="images\hebergements\marcus-loke-WQJvWU_HZFo-unsplash.jpg" alt="Avatar" />
                 <div class="containerMarseille">
                   <b>Auberge la Canebière</b><br>
                   Nuit à partir de 25€<br>
@@ -72,7 +72,7 @@
               </div>
 
               <div class="cardMarseille">
-                <img src="assets\hebergements\1_xlarge\fred-kleber-gTbaxaVLvsg-unsplash.jpg" alt="Avatar" />
+                <img src="images\hebergements\fred-kleber-gTbaxaVLvsg-unsplash.jpg" alt="Avatar" />
                 <div class="containerMarseille">
                     <b>Hôtel du Port</b><br>
                   Nuit à partir de 52€<br>
@@ -81,7 +81,7 @@
               </div>
 
               <div class="cardMarseille">
-                <img src="assets\hebergements\1_xlarge\reisetopia-B8WIgxA_PFU-unsplash.jpg" alt="Avatar" />
+                <img src="images\hebergements\reisetopia-B8WIgxA_PFU-unsplash.jpg" alt="Avatar" />
                 <div class="containerMarseille">
                     <b>Hôtel les mouettes</b><br>
                   Nuit à partir de 76€<br>
@@ -90,7 +90,7 @@
               </div>
 
               <div class="cardMarseille">
-                <img src="assets\hebergements\1_xlarge\annie-spratt-Eg1qcIitAuA-unsplash.jpg" alt="Avatar" />
+                <img src="images\hebergements\annie-spratt-Eg1qcIitAuA-unsplash.jpg" alt="Avatar" />
                 <div class="containerMarseille">
                     <b>Hôtel de la mer</b><br>
                   Nuit à partir de 46€<br>
@@ -99,7 +99,7 @@
 
               </div>
               <div class="cardMarseille">
-                <img src="assets\hebergements\1_xlarge\nicate-lee-kT-ZyaiwBe0-unsplash.jpg" alt="Avatar" />
+                <img src="images\hebergements\nicate-lee-kT-ZyaiwBe0-unsplash.jpg" alt="Avatar" />
                 <div class="containerMarseille">
                     <b>Auberge Le Panier</b><br>
                   Nuit à partir de 23€<br>
@@ -108,7 +108,7 @@
               </div>
 
               <div class="cardMarseille">
-                <img src="assets\hebergements\1_xlarge\febrian-zakaria-M6S1WvfW68A-unsplash.jpg" alt="Avatar" />
+                <img src="images\hebergements\febrian-zakaria-M6S1WvfW68A-unsplash.jpg" alt="Avatar" />
                 <div class="containerMarseille">
                     <b>Hôtel Chez Amina</b><br>
                   Nuit à partir de 96€<br>
@@ -131,7 +131,7 @@
 
           <div class="cardsBox">
             <a href="#"><div class="cardPop">
-                <img src="assets\hebergements\1_xlarge\emile-guillemot-Bj_rcSC5XfE-unsplash.jpg" alt="Avatar" />
+                <img src="images\hebergements\emile-guillemot-Bj_rcSC5XfE-unsplash.jpg" alt="Avatar" />
                 <div class="containerPop">
                   <div class="pPop">
                     <div class="titlePop">Hôtel Le soleil du matin</div>
@@ -144,7 +144,7 @@
               </div></a>
 
               <a href="#"><div class="cardPop">
-                <img src="assets\hebergements\1_xlarge\aw-creative-VGs8z60yT2c-unsplash.jpg" alt="Avatar" />
+                <img src="images\hebergements\aw-creative-VGs8z60yT2c-unsplash.jpg" alt="Avatar" />
                 <div class="containerPop">
                   <div class="pPop">
                     <div class="titlePop">Chambres d'hôtes Au coeur de l'eau</div>
@@ -157,7 +157,7 @@
               </div></a>
 
               <a href="#"><div class="cardPop">
-                <img src="assets\hebergements\1_xlarge\febrian-zakaria-sjvU0THccQA-unsplash.jpg" alt="Avatar" />
+                <img src="images\hebergements\febrian-zakaria-sjvU0THccQA-unsplash.jpg" alt="Avatar" />
                 <div class="containerPop">
                   <div class="pPop">
                     <div class="titlePop">Hôtel Bleu et Blanc</div>
@@ -179,28 +179,28 @@
     <div class="blocAct">
 
       <a href="#"><div class="cardAct">
-            <img src="assets/activites/1_xlarge/vieuxport.jpg" alt="Avatar" />
+            <img src="images\activites\reno-laithienne-QUgJhdY5Fyk-unsplash.jpg" alt="Avatar" />
             <div class="containerAct" id="activites">
               Vieux-Port
             </div>
           </div></a>
 
           <a href="#"><div class="cardAct">
-            <img src="assets\activites\1_xlarge\paul-hermann-QFTrLdQIRhI-unsplash.jpg" alt="Avatar" />
+            <img src="images\activites\paul-hermann-QFTrLdQIRhI-unsplash.jpg" alt="Avatar" />
             <div class="containerAct">
               Fort de Pomègues
             </div>
           </div></a>
 
           <a href="#"><div class="cardAct">
-            <img src="assets\activites\1_xlarge\kilyan-sockalingum-NR8-cBCN3aI-unsplash.jpg" alt="Avatar" />
+            <img src="images\activites\kilyan-sockalingum-NR8-cBCN3aI-unsplash.jpg" alt="Avatar" />
             <div class="containerAct">
               Parc national des Calanques
             </div>
           </div></a>
 
           <a href="#"><div class="cardAct">
-            <img src="assets\activites\1_xlarge\florian-wehde-xW9e8gdotxI-unsplash.jpg" alt="Avatar" />
+            <img src="images\activites\florian-wehde-xW9e8gdotxI-unsplash.jpg" alt="Avatar" />
             <div class="containerAct">
               Notre-Dame-de-la-Garde
             </div>
