--- a/index.html
+++ b/index.html
@@ -1,4 +1,8 @@
 <!-- base -->
+<!--TODO RAJOUTER MARGE en plein centre ville 
+TODO rajouter class sur les icones fontawesome -->
+
+
 <!DOCTYPE html>
 <html>
     <head>
@@ -116,7 +120,7 @@
                 </div>
               </div>
 
-              <div class="titleMarseille"><h2><a href="">Afficher plus</a></h2></div>
+              <a class="showMore" href="#">Afficher plus</a>
 
               </div>
 
@@ -174,7 +178,8 @@
     </div>
 
     <!-- activitées -->
-    <!-- TODO: ajouter titre -->
+<h2 class="titleAct">Activités à Marseille</h2>
+
 
     <div class="blocAct">
 
