--- a/index.html
+++ b/index.html
@@ -34,14 +34,14 @@
     <!-- barre de recherche -->
 
     <div class="search">
-        <button type="submit" class="searchPosition" placeholder="Rechercher"> <i class="fa-solid fa-location-dot fa-xl"  style="color:#000;"></i>
+        <button type="submit" class="searchPosition" placeholder="Rechercher"> <i class="fa-solid fa-location-dot fa-xl black"></i>
             </button>
         <input type="text" class="searchBar" placeholder="Marseille, France">
         <!-- mention "rehcercher" en desktop et tablette seulement -->
         <button type="submit" class="searchButton" placeholder="Rechercher">Rechercher
         </button>
         <!-- image loupe en mobile seulement -->
-        <button type="submit" class="searchButtonLoupe" placeholder="loupe"><i class="fa-solid fa-magnifying-glass" style="color:#000;"></i>
+        <button type="submit" class="searchButtonLoupe" placeholder="loupe"><i class="fa-solid fa-magnifying-glass black"></i>
         </button>
     </div>
 
@@ -49,14 +49,14 @@
     <!-- filtres -->
     <div class="filtersFlex">
         <div class="filter"><h2>Filtres</h2></div>
-          <div class="filtersBubble"><i class="fa-solid fa-money-bill-wave" style="color:#0065FC; margin-right: 10px;"></i> Economique</div>
-        <div class="filtersBubble"><i class="fa-solid fa-person" style="color:#0065FC; margin-right: 10px;"></i> Familial</div>
+          <div class="filtersBubble"><i class="fa-solid fa-money-bill-wave blue FAmargin"></i> Economique</div>
+        <div class="filtersBubble"><i class="fa-solid fa-person blue FAmargin"></i> Familial</div>
 
-          <div class="filtersBubble"><i class="fa-solid fa-heart" style="color:#0065FC; margin-right: 10px;"></i> Romantique</div>
-          <div class="filtersBubble"><i class="fa-solid fa-dog" style="color:#0065FC; margin-right: 10px;"></i> Animaux autorisés</div>
+          <div class="filtersBubble"><i class="fa-solid fa-heart blue FAmargin"></i> Romantique</div>
+          <div class="filtersBubble"><i class="fa-solid fa-dog blue FAmargin"></i> Animaux autorisés</div>
     </div>
 
-    <div class="infoText"><div class="infoImg"><i class="fa-solid fa-info" style="color:#0065FC; height: 8px;"></i></div> <p>Plus de 500 logements disponibles dans cette ville.</p></div>
+    <div class="infoText"><div class="infoImg"><i class="fa-solid fa-info blue small"></i></div> <p>Plus de 500 logements disponibles dans cette ville.</p></div>
     <!-- marseille + populaires -->
 
     <div class="bande">
@@ -65,60 +65,67 @@
           <div class="titleMarseille"><h2>Hébergements à Marseille</h2></div>
 
           <div class="cardsrow"> 
-          <div class="cardMarseille" id="hebergements">
+          <a href="#">
+            <div class="cardMarseille">
                 <img src="images\hebergements\marcus-loke-WQJvWU_HZFo-unsplash.jpg" alt="Avatar" />
                 <div class="containerMarseille">
                   <b>Auberge la Canebière</b><br>
                   Nuit à partir de 25€<br>
-                  <i class="fa-solid fa-star fa-xs" style="color:#0065FC;"></i><i class="fa-solid fa-star fa-xs" style="color:#0065FC;"></i><i class="fa-solid fa-star fa-xs" style="color:#0065FC;"></i><i class="fa-solid fa-star fa-xs" style="color:#0065FC;"></i><i class="fa-regular fa-star fa-xs" style="color:#0065FC;"></i>
+                  <i class="fa-solid fa-star fa-xs blue"></i><i class="fa-solid fa-star fa-xs blue"></i><i class="fa-solid fa-star fa-xs blue"></i><i class="fa-solid fa-star fa-xs blue"></i><i class="fa-regular fa-star fa-xs blue"></i>
                 </div>
               </div>
-
+          </a>
+          <a href="#">
               <div class="cardMarseille">
                 <img src="images\hebergements\fred-kleber-gTbaxaVLvsg-unsplash.jpg" alt="Avatar" />
                 <div class="containerMarseille">
                     <b>Hôtel du Port</b><br>
                   Nuit à partir de 52€<br>
-                  <i class="fa-solid fa-star fa-xs" style="color:#0065FC;"></i><i class="fa-solid fa-star fa-xs" style="color:#0065FC;"></i><i class="fa-solid fa-star fa-xs" style="color:#0065FC;"></i><i class="fa-solid fa-star fa-xs" style="color:#0065FC;"></i><i class="fa-regular fa-star fa-xs" style="color:#0065FC;"></i>
+                  <i class="fa-solid fa-star fa-xs blue"></i><i class="fa-solid fa-star fa-xs blue"></i><i class="fa-solid fa-star fa-xs blue"></i><i class="fa-solid fa-star fa-xs blue"></i><i class="fa-regular fa-star fa-xs blue"></i>
                 </div>
               </div>
-
+            </a>
+              <a href="#">
               <div class="cardMarseille">
                 <img src="images\hebergements\reisetopia-B8WIgxA_PFU-unsplash.jpg" alt="Avatar" />
                 <div class="containerMarseille">
                     <b>Hôtel les mouettes</b><br>
                   Nuit à partir de 76€<br>
-                  <i class="fa-solid fa-star fa-xs" style="color:#0065FC;"></i><i class="fa-solid fa-star fa-xs" style="color:#0065FC;"></i><i class="fa-solid fa-star fa-xs" style="color:#0065FC;"></i><i class="fa-solid fa-star fa-xs" style="color:#0065FC;"></i><i class="fa-regular fa-star fa-xs" style="color:#0065FC;"></i>
+                  <i class="fa-solid fa-star fa-xs blue"></i><i class="fa-solid fa-star fa-xs blue"></i><i class="fa-solid fa-star fa-xs blue"></i><i class="fa-solid fa-star fa-xs blue"></i><i class="fa-regular fa-star fa-xs blue"></i>
                 </div>
               </div>
-
+            </a>
+              <a href="#">
+              
               <div class="cardMarseille">
                 <img src="images\hebergements\annie-spratt-Eg1qcIitAuA-unsplash.jpg" alt="Avatar" />
                 <div class="containerMarseille">
                     <b>Hôtel de la mer</b><br>
                   Nuit à partir de 46€<br>
-                  <i class="fa-solid fa-star fa-xs" style="color:#0065FC;"></i><i class="fa-solid fa-star fa-xs" style="color:#0065FC;"></i><i class="fa-solid fa-star fa-xs" style="color:#0065FC;"></i><i class="fa-solid fa-star fa-xs" style="color:#0065FC;"></i><i class="fa-regular fa-star fa-xs" style="color:#0065FC;"></i>
+                  <i class="fa-solid fa-star fa-xs blue"></i><i class="fa-solid fa-star fa-xs blue"></i><i class="fa-solid fa-star fa-xs blue"></i><i class="fa-solid fa-star fa-xs blue"></i><i class="fa-regular fa-star fa-xs blue"></i>
                 </div>
-
               </div>
+            </a>
+              <a href="#">
               <div class="cardMarseille">
                 <img src="images\hebergements\nicate-lee-kT-ZyaiwBe0-unsplash.jpg" alt="Avatar" />
                 <div class="containerMarseille">
                     <b>Auberge Le Panier</b><br>
                   Nuit à partir de 23€<br>
-                  <i class="fa-solid fa-star fa-xs" style="color:#0065FC;"></i><i class="fa-solid fa-star fa-xs" style="color:#0065FC;"></i><i class="fa-solid fa-star fa-xs" style="color:#0065FC;"></i><i class="fa-solid fa-star fa-xs" style="color:#0065FC;"></i><i class="fa-regular fa-star fa-xs" style="color:#0065FC;"></i>
+                  <i class="fa-solid fa-star fa-xs blue"></i><i class="fa-solid fa-star fa-xs blue"></i><i class="fa-solid fa-star fa-xs blue"></i><i class="fa-solid fa-star fa-xs blue"></i><i class="fa-regular fa-star fa-xs blue"></i>
                 </div>
-              </div>
-
+              </div></a>
+              <a href="#">
+              
               <div class="cardMarseille">
                 <img src="images\hebergements\febrian-zakaria-M6S1WvfW68A-unsplash.jpg" alt="Avatar" />
                 <div class="containerMarseille">
                     <b>Hôtel Chez Amina</b><br>
                   Nuit à partir de 96€<br>
-                  <i class="fa-solid fa-star fa-xs" style="color:#0065FC;"></i><i class="fa-solid fa-star fa-xs" style="color:#0065FC;"></i><i class="fa-solid fa-star fa-xs" style="color:#0065FC;"></i><i class="fa-solid fa-star fa-xs" style="color:#0065FC;"></i><i class="fa-regular fa-star fa-xs" style="color:#0065FC;"></i>
+                  <i class="fa-solid fa-star fa-xs blue"></i><i class="fa-solid fa-star fa-xs blue"></i><i class="fa-solid fa-star fa-xs blue"></i><i class="fa-solid fa-star fa-xs blue"></i><i class="fa-regular fa-star fa-xs blue"></i>
                 </div>
               </div>
-
+            </a>
               <a class="showMore" href="#">Afficher plus</a>
 
               </div>
@@ -128,7 +135,7 @@
 
           <div class="wrapPopTitle">
             <div class="leftBoxPop"><h2>Les plus populaires</h2></div>
-            <div class="rightBoxPop"><i class="fa-solid fa-chart-line" style="color:#0065FC;"></i></div>
+            <div class="rightBoxPop"><i class="fa-solid fa-chart-line blue"></i></div>
           </div>
 
 
@@ -141,7 +148,7 @@
                   Nuit à partir de 128€<br>
                 </div>
                   <div class="stars">
-                    <i class="fa-solid fa-star fa-xs" style="color:#0065FC;"></i><i class="fa-solid fa-star fa-xs" style="color:#0065FC;"></i><i class="fa-solid fa-star fa-xs" style="color:#0065FC;"></i><i class="fa-solid fa-star fa-xs" style="color:#0065FC;"></i><i class="fa-regular fa-star fa-xs" style="color:#0065FC;"></i>
+                    <i class="fa-solid fa-star fa-xs blue"></i><i class="fa-solid fa-star fa-xs blue"></i><i class="fa-solid fa-star fa-xs blue"></i><i class="fa-solid fa-star fa-xs blue"></i><i class="fa-regular fa-star fa-xs blue"></i>
                   </div>
                 </div>
               </div></a>
@@ -154,7 +161,7 @@
                     Nuit à partir de 71€<br>
                   </div>
                     <div class="stars">
-                      <i class="fa-solid fa-star fa-xs" style="color:#0065FC;"></i><i class="fa-solid fa-star fa-xs" style="color:#0065FC;"></i><i class="fa-solid fa-star fa-xs" style="color:#0065FC;"></i><i class="fa-solid fa-star fa-xs" style="color:#0065FC;"></i><i class="fa-regular fa-star fa-xs" style="color:#0065FC;"></i>
+                      <i class="fa-solid fa-star fa-xs blue"></i><i class="fa-solid fa-star fa-xs blue"></i><i class="fa-solid fa-star fa-xs blue"></i><i class="fa-solid fa-star fa-xs blue"></i><i class="fa-regular fa-star fa-xs blue"></i>
                     </div>
                 </div>
               </div></a>
@@ -167,7 +174,7 @@
                     Nuit à partir de 68€<br>
                   </div>
                     <div class="stars">
-                      <i class="fa-solid fa-star fa-xs" style="color:#0065FC;"></i><i class="fa-solid fa-star fa-xs" style="color:#0065FC;"></i><i class="fa-solid fa-star fa-xs" style="color:#0065FC;"></i><i class="fa-solid fa-star fa-xs" style="color:#0065FC;"></i><i class="fa-regular fa-star fa-xs" style="color:#0065FC;"></i>
+                      <i class="fa-solid fa-star fa-xs blue"></i><i class="fa-solid fa-star fa-xs blue"></i><i class="fa-solid fa-star fa-xs blue"></i><i class="fa-solid fa-star fa-xs blue"></i><i class="fa-regular fa-star fa-xs blue"></i>
                     </div>
                 </div>
               </div></a>
