--- a/index.html
+++ b/index.html
@@ -38,10 +38,13 @@
             </button>
         <input type="text" class="searchBar" placeholder="Marseille, France">
         <!-- mention "rehcercher" en desktop et tablette seulement -->
-        <button type="submit" class="searchButton" placeholder="Rechercher">Rechercher
-        </button>
-        <!-- image loupe en mobile seulement -->
-        <button type="submit" class="searchButtonLoupe" placeholder="loupe"><i class="fa-solid fa-magnifying-glass black"></i>
+        <button type="submit" class="searchButton" placeholder="Rechercher">
+          <span class="loupe">
+            <i class="fa-solid fa-magnifying-glass black white"></i>
+          </span>
+          <span class="rechercher">
+            Rechercher
+          </span>
         </button>
     </div>
 
@@ -226,21 +229,21 @@
         
     <div class="blocFooter">
         <b>A propos</b><br>
-        Fonctionnement du site<br>
-        Conditions générales<br>
-        Données et confidentialité
+        <a href="#">Fonctionnement du site</a><br>
+        <a href="#">Conditions générales</a><br>
+        <a href="#">Données et confidentialité</a>
     </div>
 
     <div class="blocFooter">
         <b>Nos hébergements</b><br>
-        Charte qualité<br>
-        Proposer votre hôtel
+        <a href="#">Charte qualité</a><br>
+        <a href="#">Proposer votre hôtel</a>
     </div>
 
     <div class="blocFooter">
         <b>Assistance</b><br>
-        Centre d’aide<br>
-        Nous contacter
+        <a href="#">Centre d’aide</a><br>
+        <a href="#">Nous contacter</a>
     </div>
 
   </div>
