--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 
 
     <!-- barre de recherche -->
-
+<nav>
     <div class="search">
         <button type="submit" class="searchPosition"> <i class="fa-solid fa-location-dot fa-xl black"></i>
             </button>
@@ -48,7 +48,7 @@
           </span>
         </button>
     </div>
-
+</nav>
 
     <!-- filtres -->
     <div class="filtersFlex">
@@ -61,6 +61,10 @@
     </div>
 
     <div class="infoText"><div class="infoImg"><i class="fa-solid fa-info blue small"></i></div> <p>Plus de 500 logements disponibles dans cette ville.</p></div>
+   
+   <main>
+   
+<section>
     <!-- marseille + populaires -->
 
     <div class="bande">
@@ -69,67 +73,80 @@
           <div class="titleMarseille"><h2>Hébergements à Marseille</h2></div>
 
           <div class="cardsrow"> 
-          <a href="#">
+          <article>
+            <a href="#">
             <div class="cardMarseille">
                 <img src="images/hebergements/marcus-loke-WQJvWU_HZFo-unsplash.jpg" alt="Avatar" />
                 <div class="containerMarseille">
-                  <b>Auberge la Canebière</b><br>
+                  <h3>Auberge la Canebière</h3>
                   Nuit à partir de 25€<br>
                   <i class="fa-solid fa-star fa-xs blue"></i><i class="fa-solid fa-star fa-xs blue"></i><i class="fa-solid fa-star fa-xs blue"></i><i class="fa-solid fa-star fa-xs blue"></i><i class="fa-regular fa-star fa-xs blue"></i>
                 </div>
               </div>
           </a>
+        </article>
+        <article>
           <a href="#">
               <div class="cardMarseille">
                 <img src="images/hebergements/fred-kleber-gTbaxaVLvsg-unsplash.jpg" alt="Avatar" />
                 <div class="containerMarseille">
-                    <b>Hôtel du Port</b><br>
+                    <h3>Hôtel du Port</h3>
                   Nuit à partir de 52€<br>
                   <i class="fa-solid fa-star fa-xs blue"></i><i class="fa-solid fa-star fa-xs blue"></i><i class="fa-solid fa-star fa-xs blue"></i><i class="fa-solid fa-star fa-xs blue"></i><i class="fa-regular fa-star fa-xs blue"></i>
                 </div>
               </div>
             </a>
+          </article>
+          <article>
               <a href="#">
               <div class="cardMarseille">
                 <img src="images/hebergements/reisetopia-B8WIgxA_PFU-unsplash.jpg" alt="Avatar" />
                 <div class="containerMarseille">
-                    <b>Hôtel les mouettes</b><br>
+                    <h3>Hôtel les mouettes</h3>
                   Nuit à partir de 76€<br>
                   <i class="fa-solid fa-star fa-xs blue"></i><i class="fa-solid fa-star fa-xs blue"></i><i class="fa-solid fa-star fa-xs blue"></i><i class="fa-solid fa-star fa-xs blue"></i><i class="fa-regular fa-star fa-xs blue"></i>
                 </div>
               </div>
             </a>
+          </article>
+          <article>
               <a href="#">
               
               <div class="cardMarseille">
                 <img src="images/hebergements/annie-spratt-Eg1qcIitAuA-unsplash.jpg" alt="Avatar" />
                 <div class="containerMarseille">
-                    <b>Hôtel de la mer</b><br>
+                    <h3>Hôtel de la mer</h3>
                   Nuit à partir de 46€<br>
                   <i class="fa-solid fa-star fa-xs blue"></i><i class="fa-solid fa-star fa-xs blue"></i><i class="fa-solid fa-star fa-xs blue"></i><i class="fa-solid fa-star fa-xs blue"></i><i class="fa-regular fa-star fa-xs blue"></i>
                 </div>
               </div>
             </a>
+          </article>
+          <article>
               <a href="#">
               <div class="cardMarseille">
                 <img src="images/hebergements/nicate-lee-kT-ZyaiwBe0-unsplash.jpg" alt="Avatar" />
                 <div class="containerMarseille">
-                    <b>Auberge Le Panier</b><br>
+                    <h3>Auberge Le Panier</h3>
                   Nuit à partir de 23€<br>
                   <i class="fa-solid fa-star fa-xs blue"></i><i class="fa-solid fa-star fa-xs blue"></i><i class="fa-solid fa-star fa-xs blue"></i><i class="fa-solid fa-star fa-xs blue"></i><i class="fa-regular fa-star fa-xs blue"></i>
                 </div>
-              </div></a>
+              </div>
+            </a>
+          </article>
+          <article>
               <a href="#">
               
               <div class="cardMarseille">
                 <img src="images/hebergements/febrian-zakaria-M6S1WvfW68A-unsplash.jpg" alt="Avatar" />
                 <div class="containerMarseille">
-                    <b>Hôtel Chez Amina</b><br>
+                    <h3>Hôtel Chez Amina</h3>
                   Nuit à partir de 96€<br>
                   <i class="fa-solid fa-star fa-xs blue"></i><i class="fa-solid fa-star fa-xs blue"></i><i class="fa-solid fa-star fa-xs blue"></i><i class="fa-solid fa-star fa-xs blue"></i><i class="fa-regular fa-star fa-xs blue"></i>
                 </div>
               </div>
             </a>
+          </article>
               <a class="showMore" href="#">Afficher plus</a>
 
               </div>
@@ -144,86 +161,111 @@
 
 
           <div class="cardsBox">
-            <a href="#"><div class="cardPop">
+            <article>
+              <a href="#">
+                <div class="cardPop">
                 <img src="images/hebergements/emile-guillemot-Bj_rcSC5XfE-unsplash.jpg" alt="Avatar" />
                 <div class="containerPop">
                   <div class="pPop">
-                    <div class="titlePop">Hôtel Le soleil du matin</div>
+                    <h3>Hôtel Le soleil du matin</h3>
                   Nuit à partir de 128€<br>
                 </div>
                   <div class="stars">
                     <i class="fa-solid fa-star fa-xs blue"></i><i class="fa-solid fa-star fa-xs blue"></i><i class="fa-solid fa-star fa-xs blue"></i><i class="fa-solid fa-star fa-xs blue"></i><i class="fa-regular fa-star fa-xs blue"></i>
                   </div>
                 </div>
-              </div></a>
+              </div>
+            </a>
+            </article>
 
+            <article>
               <a href="#"><div class="cardPop">
                 <img src="images/hebergements/aw-creative-VGs8z60yT2c-unsplash.jpg" alt="Avatar" />
                 <div class="containerPop">
                   <div class="pPop">
-                    <div class="titlePop">Chambres d'hôtes Au coeur de l'eau</div>
+                    <h3>Chambres d'hôtes Au coeur de l'eau</h3>
                     Nuit à partir de 71€<br>
                   </div>
                     <div class="stars">
                       <i class="fa-solid fa-star fa-xs blue"></i><i class="fa-solid fa-star fa-xs blue"></i><i class="fa-solid fa-star fa-xs blue"></i><i class="fa-solid fa-star fa-xs blue"></i><i class="fa-regular fa-star fa-xs blue"></i>
                     </div>
                 </div>
-              </div></a>
+              </div>
+            </a>
+          </article>
 
+          <article>
               <a href="#"><div class="cardPop">
                 <img src="images/hebergements/febrian-zakaria-sjvU0THccQA-unsplash.jpg" alt="Avatar" />
                 <div class="containerPop">
                   <div class="pPop">
-                    <div class="titlePop">Hôtel Bleu et Blanc</div>
+                    <h3>Hôtel Bleu et Blanc</h3>
                     Nuit à partir de 68€<br>
                   </div>
                     <div class="stars">
                       <i class="fa-solid fa-star fa-xs blue"></i><i class="fa-solid fa-star fa-xs blue"></i><i class="fa-solid fa-star fa-xs blue"></i><i class="fa-solid fa-star fa-xs blue"></i><i class="fa-regular fa-star fa-xs blue"></i>
                     </div>
                 </div>
-              </div></a>
+              </div>
+            </a>
+          </article>
             </div>
         </div>
 
     </div>
-
+</section>
     <!-- activitées -->
+    <section>
 <h2 class="titleAct">Activités à Marseille</h2>
 
 
     <div class="blocAct">
-
-      <a href="#"><div class="cardAct">
+      <article>
+      <a href="#">
+        <div class="cardAct">
             <img src="images/activites/reno-laithienne-QUgJhdY5Fyk-unsplash.jpg" alt="Avatar" />
             <div class="containerAct" id="activites">
-              Vieux-Port
+              <h3>Vieux-Port</h3>
             </div>
-          </div></a>
+          </div>
+        </a>
+      </article>
 
-          <a href="#"><div class="cardAct">
+          <article>
+          <a href="#">
+            <div class="cardAct">
             <img src="images/activites/paul-hermann-QFTrLdQIRhI-unsplash.jpg" alt="Avatar" />
             <div class="containerAct">
-              Fort de Pomègues
+              <h3>Fort de Pomègues</h3>
             </div>
-          </div></a>
+          </div>
+        </a>
+      </article>
 
-          <a href="#"><div class="cardAct">
+          <article>
+          <a href="#">
+            <div class="cardAct">
             <img src="images/activites/kilyan-sockalingum-NR8-cBCN3aI-unsplash.jpg" alt="Avatar" />
             <div class="containerAct">
-              Parc national des Calanques
+              <h3>Parc national des Calanques</h3>
             </div>
-          </div></a>
+          </div>
+        </a>
+      </article>
 
+          <article>
           <a href="#"><div class="cardAct">
             <img src="images/activites/florian-wehde-xW9e8gdotxI-unsplash.jpg" alt="Avatar" />
             <div class="containerAct">
-              Notre-Dame-de-la-Garde
+              <h3>Notre-Dame-de-la-Garde</h3>
             </div>
-          </div></a>
+          </div>
+        </a>
+      </article>
 
           </div>
-
-
+</section>
+</main>   
 
 <footer>
   <div class="gridFooter">
