--- a/index.html
+++ b/index.html
@@ -1,7 +1,3 @@
-<!-- base -->
-
-
-
 <!DOCTYPE html>
 <html lang="fr">
     <head>
@@ -13,6 +9,8 @@
         <link rel="preconnect" href="https://fonts.googleapis.com"><link rel="preconnect" href="https://fonts.gstatic.com" crossorigin><link href="https://fonts.googleapis.com/css2?family=Raleway:wght@100;200;300;400;500;600;700;800;900&display=swap" rel="stylesheet">
     </head>
     <body>
+
+
 
     <header>
         <div class="headWrapper">
@@ -32,7 +30,10 @@
     </header>
 
 
+
+
     <!-- barre de recherche -->
+
 <nav>
     <div class="search">
         <button type="submit" class="searchPosition"> <i class="fa-solid fa-location-dot fa-xl black"></i>
@@ -50,7 +51,11 @@
     </div>
 </nav>
 
+
+
+
     <!-- filtres -->
+
     <div class="filtersFlex">
         <div class="filter"><h2>Filtres</h2></div>
           <div class="filtersBubble"><i class="fa-solid fa-money-bill-wave blue FAmargin"></i> Economique</div>
@@ -64,7 +69,11 @@
    
    <main>
    
+
+
+
 <section>
+
     <!-- marseille + populaires -->
 
     <div class="bande">
@@ -214,7 +223,12 @@
 
     </div>
 </section>
+
+
+
+
     <!-- activitées -->
+
     <section>
 <h2 class="titleAct">Activités à Marseille</h2>
 
@@ -266,6 +280,9 @@
           </div>
 </section>
 </main>   
+
+
+<!-- pied de page -->
 
 <footer>
   <div class="gridFooter">
